[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/Buttons/Resume_Pressed.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/Buttons/Decline.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/Buttons/Resume.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/Buttons/Back_Pressed.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/Buttons/Decline_Pressed.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/Buttons/Back.png" type="Texture" id=7]

[node name="PauseLayer" type="CanvasLayer"]
pause_mode = 2

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Buttons" type="HBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -20.0
margin_right = 18.0
margin_bottom = 20.0

[node name="MenuButton" type="TextureButton" parent="Pause/Buttons"]
visible = false
margin_right = 16.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )

[node name="ResumeButton" type="TextureButton" parent="Pause/Buttons"]
margin_right = 16.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )

[node name="ExitButton" type="TextureButton" parent="Pause/Buttons"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[connection signal="pressed" from="Pause/Buttons/MenuButton" to="Pause" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Pause/Buttons/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/Buttons/ExitButton" to="Pause" method="_on_ExitButton_pressed"]
